# header_analyzer

./: README.md  main.py  pyproject.toml  requirements.txt
docs/parsers/: canonical.md
src/header_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/header_analyzer/core/: models.py  parse.py
src/header_analyzer/core/parsers/: authentication.py  canonical.py  canonicalizer.py
src/header_analyzer/data/sample_headers/: compromised_account.txt  malware_delivery.txt  spoofed_sender.txt
tests/: test_auth_results.py  test_canonical.py  test_parse_headers.py
